--- a/homework7/2017302580148-杜喆炜.md
+++ b/homework7/2017302580148-杜喆炜.md
@@ -1,1 +1,38 @@
 
+# Homework6
+
+## 选做三道题目
+
+### P2
+a.不可以，交换结构使用一条共享总线的时候在同一时间只能传输一个分组  
+b.不可以，因为共享系统总线一次仅能执行一个内存的读/写  
+c.不可以，向相同输出端口转发的时候，纵横式也仅能一个发送另一个等待  
+
+### P5
+a.  
+|最长前缀|链路接口 |
+|---|---|
+|11100000 00|	0
+|11100000 01000000|	1
+|1110000 |	2
+|11100001 1|	3
+|其他|	3  
+
+b.  
+11001000 10010001:匹配前三个bit即可发现符合第五个前缀，前往接口3  
+11100001 01000000:匹配到第九个bit即可发现符合第三个前缀，前往接口2  
+11100001 10000000:匹配到第九个bit即可发现符合第四个前缀，前往接口3  
+
+### P6
+|目标地址范围|链路接口 |
+|---|---|
+|00000000到00111111|	0
+|01000000到01011111|	1
+|01100000到01111111|	2
+|10000000到10111111|	2
+|11000000到11111111|	3  
+
+0号接口：2^6 = 64  
+1号接口：2^5 = 32  
+2号接口：2^5 + 2^6 = 96  
+3号接口：2^6 = 64
