--- a/homework11/2017302580148-杜喆炜.md
+++ b/homework11/2017302580148-杜喆炜.md
@@ -1,6 +1,6 @@
-# Homework9
+# Homework11
 
-## 选做三道题目
+## 选做五道题目
 
 ### P1
 1 1 1 0 1  
@@ -12,7 +12,7 @@
 ### P5
 因为G=10011，所以r=4  
 所以演算过程如图： 
-
+![](https://github.com/dubaodan/-/blob/master/homework11/1.png)
 由于r=4,所以R=0100  
 ### P7
 a.  
@@ -24,7 +24,7 @@ b.
 在模2除法中，G mod 11的余数是0，然而对于任何位数的，拥有奇数个1的R来说，它是不可能被11除尽的  
 所以它也不可能被G除尽，那么一定可以检测出来  
 ### P8
-
+![](https://github.com/dubaodan/-/blob/master/homework11/2.png)
 ### P11
 a.  
 P = p(1-p)^3  
